Json2go html - style

--- a/json2go/index.html
+++ b/json2go/index.html
@@ -22,7 +22,7 @@
                 <button id="run">Convert to go!</button>
             </div>
             <div class="row">
-                <pre id="out"></pre>
+                <pre id="out" style="width: 100%; tab-size: 4;"></pre>
             </div>
         </div>
 
