--- a/json2go/index.html
+++ b/json2go/index.html
@@ -19,10 +19,7 @@
                 <textarea id="input" cols="30" rows="10" placeholder="Paste json here"></textarea>
             </div>
             <div class="row">
-                <button id="run">Convert to go!</button>
-            </div>
-            <div class="row">
-                <pre id="out" style="width: 100%; tab-size: 4;"></pre>
+                <pre id="out" class="is-full-width">waiting for input ...</pre>
             </div>
         </div>
 
