--- a/json2go/index.html
+++ b/json2go/index.html
@@ -15,6 +15,9 @@
 
     <link href="jsoneditor/jsoneditor.min.css" rel="stylesheet" type="text/css">
     <script src="jsoneditor/jsoneditor.min.js"></script>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 
 <body class="bg-light">
